--- a/views/templates/admin/form.html.twig
+++ b/views/templates/admin/form.html.twig
@@ -1,23 +1,35 @@
+{#
+/**
+ *  Copyright (c) 2025 iepiep <r.minini@solution61.fr>
+ *
+ *  This source file is subject to the MIT license that is bundled
+ *  with this source code in the file LICENSE.
+ *
+ *  If you did not receive a copy of the license and are unable to
+ *  obtain it through the world-wide-web, please send an email
+ *  to r.minini@solution61.fr so we can send you a copy immediately.
+ */
+#}
 {% extends '@PrestaShop/Admin/layout.html.twig' %}
 
 {% block content %}
-  {{ form_start(ConfigurationForm) }}
-  <div class="card">
-    <h3 class="card-header">
-      <i class="material-icons">settings</i> {{ 'Text form types'|trans({}, 'Modules.Dimsymfony.Admin') }}
-    </h3>
-    <div class="card-body">
-      <div class="form-wrapper">
-        {{ form_widget(ConfigurationForm) }}
-      </div>
+    {{ form_start(ConfigurationForm) }}
+    <div class="card">
+        <h3 class="card-header">
+            <i class="material-icons">settings</i> {{ 'Configuration'|trans({}, 'Modules.Dimsymfony.Admin') }}
+        </h3>
+        <div class="card-body">
+            <div class="form-wrapper">
+                {{ form_widget(ConfigurationForm) }}
+            </div>
+        </div>
+        <div class="card-footer">
+            <div class="d-flex justify-content-end">
+                <button class="btn btn-primary float-right" id="save-button">
+                    {{ 'Save'|trans({}, 'Admin.Actions') }}
+                </button>
+            </div>
+        </div>
     </div>
-    <div class="card-footer">
-      <div class="d-flex justify-content-end">
-        <button class="btn btn-primary float-right" id="save-button">
-          {{ 'Save'|trans({}, 'Admin.Actions') }}
-        </button>
-      </div>
-    </div>
-  </div>
-  {{ form_end(ConfigurationForm) }}
+    {{ form_end(ConfigurationForm) }}
 {% endblock %}
